--- a/csssheet/css/style.css
+++ b/csssheet/css/style.css
@@ -1,3 +1,170 @@
-h1{
+
+/*
+*{
+	margin:0;
+	padding:0;
+}
+*/
+
+body{
+	background-color: #f4f4f4;
+	color: #555555;
+
+	font-family: Arial, Helvetica, sans-serif;
+
+	font-size: 16px;
+	font-weight: normal;
+/*	font: normal 16px Arial, Helvetica, sans-serif;*/
+
+	line-height: 1.6em;
+
+	margin: 0;
+}
+
+/*链接的全局配置*/
+a{
+	text-decoration: none;
+	color:#000;
+}
+
+a:hover{
+	color:red;
+}
+
+a:active{
 	color:green;
+}
+
+a:visited{
+/*	color:black;*/
+}
+
+.container{
+/*	width:960px;*/
+	width:80%;
+	margin:auto;
+}
+
+/* .my-form input[type="submit"]{ */
+.button{
+	background-color: :#333;	/* grey */
+	color:#fff;					/* white */
+	padding:10px 15px;
+	border:none;
+}
+
+.button:hover{
+	background: red;
+	color:#fff;
+}
+
+.clr{
+	clear: both;
+}
+
+.box-1{
+	background-color: #333333;
+	color:#fff;
+/*
+	border-right: 5px red solid;
+	border-left: 5px red solid;
+	border-top: 5px red solid;
+	border-bottom: 5px red solid;
+
+	border-width: 3px;
+	border-bottom-width: 10px;
+	border-top-style: dotted;
+*/
+	border: 5px red solid;
+
+/*
+	padding-top: 20px;
+	padding-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
+*/
+	padding:20px;
+
+	margin-top:20px;
+	margin:20px 0;
+
+}
+
+.box-1 h1{
+	font-family: Tahoma;
+	font-weight: 800;
+	font-style: italic;
+	text-decoration: underline;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	word-spacing: 1em;
+}
+
+.box-2{
+	border: 3px dotted #ccc;
+	padding:20px;
+	margin:20px 0;
+}
+
+.categories{
+	border:5px #ccc solid;
+	padding:10px;
+	border-radius:15px;
+}
+
+.categories h2{
+	text-align: center;
+}
+
+.categories ul{
+	padding:0;
+	padding-left: 20px;
+	list-style: square;
+	list-style: none;
+}
+
+.categories li{
+	padding-bottom: 8px;
+	border-bottom:dotted 1px #333; 
+	list-style-image: url('../images/check.png');
+}
+
+.my-form{
+	padding: 20px;	
+}
+
+.my-form .form-group{
+	padding-bottom: 15px;
+}
+/**/
+.my-form label{
+	display: block;
+}
+
+.my-form input[type="text"], .my-form textarea{
+	padding:5px;
+	width:100%;
+}
+
+.block{
+	float: left;
+	width:33.3%;
+	border:1px solid #ccc;
+	padding:10px;
+	box-sizing: border-box;
+}
+
+
+#main-block{
+	float: left;
+	width:70%;
+}
+
+#sidebar{
+	float:right;
+	width:30%;
+	background-color: #333;
+	color:#fff;
+	padding:15px;
+	box-sizing: border-box;
 }
